--- a/70_pf/jeep/css/index_fullpage.css
+++ b/70_pf/jeep/css/index_fullpage.css
@@ -1,6 +1,5 @@
 @charset "utf-8";
 @import url(/w0310/70_pf/jeep/css/header.css);
-@import url(/w0310/70_pf/jeep/css/section3.css);
 /* 메인섹션 */
 .section {
     height: 100vh;
@@ -32,18 +31,18 @@ iframe {
     min-width: 177.78vh; /* 16:9 비율 (100vh * 16/9) */
 }
 
-
+/* 
 .section:nth-child(2) {
     background: #e67e22;
-}
+} */
 
 /* section3 */
 
-.section:nth-child(4) {
+/* .section:nth-child(4) {
     background: #dbe730;
-}
+} */
 
-.footer {
+/* .footer {
     height: 100vh;
     width: 100%;
     text-align: center;
@@ -54,4 +53,4 @@ iframe {
     justify-content: center;
     align-items: center;
     transition: background 0.5s;
-}
+} */
