--- a/70_pf/jeep/css/index.css
+++ b/70_pf/jeep/css/index.css
@@ -1,9 +1,9 @@
 @charset "utf-8";
-@import url(/w0310/70_pf/jeep/css/header.css);
-@import url(/w0310/70_pf/jeep/css/section2.css);
-@import url(/w0310/70_pf/jeep/css/section3.css);
-@import url(/w0310/70_pf/jeep/css/section4.css);
-@import url(/w0310/70_pf/jeep/css/footer.css);
+@import url(./header.css);
+@import url(./section2.css);
+@import url(./section3.css);
+@import url(./section4.css);
+@import url(./footer.css);
 /* 메인섹션 */
 .section {
     height: 100vh;
