--- a/70_pf/mysite2/css/main.css
+++ b/70_pf/mysite2/css/main.css
@@ -1,8 +1,11 @@
 @charset "utf-8";
 @import url("reset.css");
 
+
+
 body {
-    font-family: "Lato", sans-serif;
+    font-family:"Lato", sans-serif;
+    line-height: 1.8;
 }
 
 .ls10 {
@@ -21,4 +24,17 @@ footer a {
 #sec1 {
     height: 100vh;
     background: url(../images/sec1_1.jpg) no-repeat 50% 50% / cover fixed;
+}
+
+/* section */
+.sec {
+    max-width: 920px;
+}
+
+.progress {
+    height: 35px;
+}
+
+#skill p {
+    letter-spacing: 4px;
 }
