--- a/70_pf/mysite2/css/reset.css
+++ b/70_pf/mysite2/css/reset.css
@@ -10,6 +10,11 @@
 }
 
 
+html, body, div, ul, li, h1, h2, h3, p {
+    margin: 0;
+    padding: 0;
+}
+
 ul {
     list-style: none;
     padding: 0;
@@ -17,4 +22,10 @@ ul {
 
 a {
     text-decoration: none;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
