--- a/70_pf/mysite2/css/main.css
+++ b/70_pf/mysite2/css/main.css
@@ -40,7 +40,7 @@ footer a {
     letter-spacing: 4px;
 }
 
-#sec3 {
+#sec3 .bg {
     height: 100vh;
     background: url(../images/sec1_1.jpg) no-repeat 50% 50% / cover fixed;
 }
