--- a/70_pf/haribo_pf/css/main.css
+++ b/70_pf/haribo_pf/css/main.css
@@ -101,7 +101,7 @@ a {
     display: block;
     font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 5px;
+    line-height: 1.2;
     /* padding: 9px 15px; */
 }
 
@@ -120,6 +120,10 @@ a {
 
 /* 개별섹션 */
 /* sec2 */
+#sec2 {
+    padding-bottom: 100px;
+}
+
 #sec2 li {
     position: relative;
     margin-bottom: 16px;
@@ -139,7 +143,81 @@ a {
     border: 3px solid var(--subColor);
 }
 
+/* sec_history */
+#sec_history {
+    position: relative;
+    width: 100%;
+    height: 1200px;
+    background: url(../images/sech_bg.png) no-repeat 50% 50% / cover fixed;
+    background-attachment: fixed;
+    overflow: hidden;
+}
+
+.sech {
+    padding-top: 250px;
+    margin: 0 auto;
+}
+
+#sec_history .logo {
+    width: 150px;
+    height: 40px;
+    margin: 0 auto;
+    padding-left: 10px;
+}
+
+#sec_history h3 {
+    font-family: "Noto Sans KR", sans-serif;
+    font-size: 3.2rem;
+    font-weight: 700;
+    text-align: center;
+    line-height: 1.2;
+    margin: 40px 0 30px 0;
+    color: var(--white);
+}
+
+#sec_history p {
+    text-align: center;
+    margin-top: 30px;
+    color: var(--white);
+}
+
+#sec_history .gem {
+    font-family: "Archivo", sans-serif;
+    font-weight: bold;
+    font-style: 2rem;
+    margin-bottom: 60px;
+}
+
+.sech_btn {
+    padding-top: 70px;
+}
+
+.sech_btn a {
+    font-family: "Titan one", sans-serif;
+    display: block;
+    margin: 0 auto;
+    width: 212px;
+    height: 70px;
+    border-radius: 50px;
+    text-align: center;
+    line-height: 70px;
+    font-size: 2rem;
+    cursor: pointer;
+    color: var(--mainColor);
+    background: var(--white);
+    border: 2px solid var(--mainColor);
+}
+
+.sech_btn a:hover {
+    background: var(--mainColor);
+    color: var(--white);
+}
+
 /* sec3 */
+#sec3 {
+    padding-bottom: 100px;
+}
+
 #sec3 h2 {
     color: var(--mainColor);
     margin-bottom: 40px;
@@ -219,8 +297,15 @@ a {
     margin: 16px 0 48px 0;
 }
 
-#sec4 #map {
+#sec4 .sec4_flex div:first-child {
+    padding: 16px;
+}
+
+#sec4 #map iframe {
     margin-bottom: 8px;
+    width: 100vw;
+    height: 500px;
+    border: none;
 }
 
 /* footer */
@@ -265,6 +350,7 @@ a {
 
     #sec1 h2 img {
         width: 250px;
+        margin-bottom: 20px;
         display: block;
     }
 
@@ -273,6 +359,7 @@ a {
         font-size: 3.4rem;
         font-weight: 700;
         letter-spacing: 5px;
+        line-height: 1.2;
         /* padding: 9px 15px; */
     }
 
@@ -282,6 +369,15 @@ a {
         display: flex;
         flex-wrap: wrap;
         gap: 0 16px;
+    }
+
+    .sec4_flex {
+        display: flex;
+    }
+
+    .sec4_flex div {
+        margin-right: 8px;
+        flex: 0 0 calc(50% - 8px);
     }
     #sec2 li,
     #sec3 li {
@@ -316,6 +412,17 @@ a {
         font-size: 6.4rem;
     }
 
+    /* sec_history */
+
+    #sec_history .logo {
+        width: 320px;
+        height: 100px;
+    }
+
+    #sec_history h3 {
+        font-size: 6.4rem;
+    }
+
     /* sec2,3 */
     #sec2 li,
     #sec3 li {
@@ -334,6 +441,10 @@ a {
 
     #footer span:last-child {
         display: inline-block;
+    }
+
+    #sec4 #map iframe {
+        height: 700px;
     }
 }
 
