--- a/70_pf/tylenol/css/sec1.css
+++ b/70_pf/tylenol/css/sec1.css
@@ -20,6 +20,10 @@
 }
 
 #sec1 h3 {
+    position: absolute;
+    left: 30%;
+    bottom: 30%;
+    transform: translate(-50%, -50%);
     font-size: 2.8rem;
     font-weight: 800;
     color: var(--red);
@@ -27,28 +31,28 @@
 
 /* tablet */
 @media (min-width: 768px) {
-#sec1 h2 {
-    position: absolute;
-    left: 30%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 16rem;
-    color: var(--red);
-    font-weight: 800;
-    letter-spacing: 2.5px;
-}
+    #sec1 h2 {
+        position: absolute;
+        left: 30%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 16rem;
+        color: var(--red);
+        font-weight: 800;
+        letter-spacing: 2.5px;
+    }
 }
 
 /* desktop */
 @media (min-width: 1200px) {
-#sec1 h2 {
-    position: absolute;
-    left: 30%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 26rem;
-    color: var(--red);
-    font-weight: 800;
-    letter-spacing: 2.5px;
-}
+    #sec1 h2 {
+        position: absolute;
+        left: 30%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 26rem;
+        color: var(--red);
+        font-weight: 800;
+        letter-spacing: 2.5px;
+    }
 }
