--- a/70_pf/tylenol/css/reset.css
+++ b/70_pf/tylenol/css/reset.css
@@ -1,12 +1,8 @@
 @charset "utf-8";
 /* reset */
-@font-face {
-    font-family: "Pretendard-Regular";
-    src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
-        format("woff");
-    font-weight: 400;
-    font-style: normal;
-}
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
+
+
 
 /* color, font size*/
 :root {
@@ -31,7 +27,7 @@ html,
 body {
     color: var(--text);
     background: var(--white);
-    font: 1.6rem/1.6 "Pretendard-Regular", sans-serif;
+    font: 1.6rem/1.6 "Pretendard Variable", sans-serif;
 }
 
 html {
