--- a/70_pf/tylenol/css/sec1.css
+++ b/70_pf/tylenol/css/sec1.css
@@ -2,66 +2,276 @@
 @import url(./reset.css);
 
 /* 공통, 모바일 포함 */
-#sec1 {
-    position: relative;
+body {
     height: 100vh;
     width: 100%;
 }
 
-#sec1 h2 {
+#sec1 {
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+}
+
+.sec1_slider {
+    display: flex;
+    width: calc(100vw *3);
+    overflow-x: auto;
+}
+
+/* container1 */
+.sec1_container_1 {
+    position: relative;
+    display: flex;
+    width: max-content;
+    height: 100vh;
+    color: var(--red);
+    background: var(--white);
+}
+
+.sec1_container_1>div {
+    flex: 0 0 100vw;
+}
+
+.sec1_container_1 .img_1 {
+    width: 300px;
+    height: 200px;
     position: absolute;
-    transform: translate(-50%, -50%);
+    top: 43%;
+    left: 19%;
+    animation: motion 1.5s linear 0.2s infinite alternate;
+}
+
+.sec1_container_1 .img_2 {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 43%;
+    left: 19%;
+    animation: rotate_image 3s linear infinite;
+    transform-origin: 50% 50%;
+}
+
+@keyframes motion {
+    0% {
+        margin-top: 0px;
+    }
+
+    50% {
+        margin-top: 5px;
+    }
+
+    100% {
+        margin-top: 10px;
+    }
+}
+
+
+@keyframes rotate_image {
+    100% {
+        transform: rotate(360deg);
+    }
+
+}
+
+.sec1_container_1 .img_1 {
+    opacity: 0;
+    transform: translateY(-350px);
+    transition: all 0.6s ease;
+}
+
+.sec1_container_1 .img_2 {
+    opacity: 0;
+    transform: translateY(-350px);
+    transition: all 0.6s ease;
+}
+
+.sec1_container_1 .img_1.show {
+    opacity: 1;
+    transform: translateX(0);
+    transform: rotate(15deg);
+
+}
+
+.sec1_container_1 .img_2.show {
+    opacity: 1;
+    transform: translateX(0);
+    transform: rotate(15deg);
+
+}
+
+h2 {
+    position: absolute;
     font-size: 8rem;
-    color: var(--red);
     font-weight: 800;
+    line-height: 1;
 }
 
-#sec1 .font_1 {
+h3 {
     position: absolute;
-    left: 30%;
-    top: 307px;
+    font-weight: 800;
+    line-height: 1;
 }
 
-#sec1 .font_2 {
+.font_1 {
     position: absolute;
-    right: 0;
-    top: 50%;
+    left: 5%;
+    top: 32%;
 }
 
-#sec1 h3 {
+.font_2 {
     position: absolute;
-    left: 30%;
-    bottom: 30%;
-    transform: translate(-50%, -50%);
+    right: 5%;
+    top: 40%;
+}
+
+.font_3 {
+    position: absolute;
     font-size: 2.8rem;
-    font-weight: 800;
-    color: var(--red);
+    left: 5%;
+    bottom: 30%;
 }
+
+.font_4 {
+    position: absolute;
+    font-size: 1.6rem;
+    left: 5%;
+    bottom: 27%;
+}
+
+/* container2 */
+.sec1_container_2 {
+    display: flex;
+    position: relative;
+    width: max-content;
+    height: 100vh;
+    color: var(--red);
+    background: var(--yellow);
+}
+
+.sec1_container_2>div {
+    flex: 0 0 100vw;
+
+}
+
+/* container3 */
+.sec1_container_3 {
+    display: flex;
+    position: relative;
+    width: max-content;
+    height: 100vh;
+    color: var(--white);
+    background: var(--blue);
+}
+
+.sec1_container_3>div {
+    flex: 0 0 100vw;
+
+}
+
+
+
+/* 효과 */
+.sec1_container_1 .font_1 {
+    opacity: 1;
+    transform: translateX(-1905px);
+    transition: all 0.6s ease;
+}
+
+.sec1_container_1 .font_2 {
+    opacity: 1;
+    transform: translateX(1905px);
+    transition: all 0.6s ease;
+}
+
+.sec1_container_1 .font_3,
+.sec1_container_1 .font_4 {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 0.6s ease;
+}
+
+.sec1_container_1 .show {
+    opacity: 1;
+    transform: translateX(0);
+}
+
 
 /* tablet */
 @media (min-width: 768px) {
-    #sec1 h2 {
+    .sec1_container_1 .img_1 {
+        width: 500px;
+        height: 300px;
         position: absolute;
-        left: 30%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 16rem;
-        color: var(--red);
-        font-weight: 800;
-        letter-spacing: 2.5px;
+        top: 33%;
+        left: 17%;
+        animation: motion 1.5s linear 0.2s infinite alternate;
     }
+
+    h2 {
+        position: absolute;
+        font-size: 12rem;
+        font-weight: 800;
+        text-align: center;
+        line-height: 1;
+    }
+
+    .font_1 {
+        position: absolute;
+        left: 5%;
+        top: 30%;
+    }
+
+    .font_2 {
+        position: absolute;
+        right: 5%;
+        top: 40%;
+    }
+
 }
 
 /* desktop */
 @media (min-width: 1200px) {
-    #sec1 h2 {
+    .sec1_container_1 .img_1 {
+        width: 800px;
+        height: 500px;
         position: absolute;
-        left: 30%;
-        top: 50%;
-        transform: translate(-50%, -50%);
+        top: 23%;
+        left: 28%;
+        animation: motion 1.5s linear 0.2s infinite alternate;
+    }
+
+    h2 {
+        position: absolute;
         font-size: 26rem;
-        color: var(--red);
         font-weight: 800;
-        letter-spacing: 2.5px;
+        text-align: center;
+        line-height: 1;
+    }
+
+    .font_1 {
+        position: absolute;
+        left: 3%;
+        top: 22%;
+    }
+
+    .font_2 {
+        position: absolute;
+        right: 3%;
+        top: 44%;
+    }
+
+    .font_3 {
+        position: absolute;
+        font-size: 4.6rem;
+        left: 5%;
+        bottom: 25%;
+    }
+
+    .font_4 {
+        position: absolute;
+        font-size: 1.8rem;
+        left: 5%;
+        bottom: 22%;
     }
 }
