--- a/70_pf/tylenol/css/sec1.css
+++ b/70_pf/tylenol/css/sec1.css
@@ -4,32 +4,40 @@
 /* 공통, 모바일 포함 */
 body {
     height: 100vh;
-    width: 100%;
 }
 
 #sec1 {
-    height: 100vh;
     width: 100vw;
+    height: 100vh;
     overflow: hidden;
 }
 
 .sec1_slider {
     display: flex;
-    width: calc(100vw *3);
     overflow-x: auto;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+    scrollbar-width: none;
+    /* Firefox */
+    -ms-overflow-style: none;
+    /* IE */
+}
+
+.sec1_slider::-webkit-scrollbar {
+    display: none;
 }
 
 /* container1 */
 .sec1_container_1 {
-    position: relative;
+    flex: 0 0 100vw;
     display: flex;
-    width: max-content;
     height: 100vh;
     color: var(--red);
     background: var(--white);
 }
 
 .sec1_container_1>div {
+    position: relative;
     flex: 0 0 100vw;
 }
 
@@ -141,30 +149,30 @@ h3 {
 
 /* container2 */
 .sec1_container_2 {
+    flex: 0 0 100vw;
     display: flex;
-    position: relative;
-    width: max-content;
     height: 100vh;
     color: var(--red);
     background: var(--yellow);
 }
 
 .sec1_container_2>div {
+    position: relative;
     flex: 0 0 100vw;
 
 }
 
 /* container3 */
 .sec1_container_3 {
+    flex: 0 0 100vw;
     display: flex;
-    position: relative;
-    width: max-content;
     height: 100vh;
     color: var(--white);
     background: var(--blue);
 }
 
 .sec1_container_3>div {
+    position: relative;
     flex: 0 0 100vw;
 
 }
