--- a/70_pf/tylenol/css/sec1.css
+++ b/70_pf/tylenol/css/sec1.css
@@ -1,9 +1,14 @@
 @charset "utf-8";
 @import url(./reset.css);
+@import url(./header.css);
 
 /* 공통, 모바일 포함 */
 body {
+    width: 100%;
     height: 100vh;
+    overflow-y: hidden;
+    position: relative;
+
 }
 
 #sec1 {
@@ -12,10 +17,17 @@ body {
     overflow: hidden;
 }
 
+#sec2 {
+    width: 100vw;
+    height: 100vh;
+}
+
 .sec1_slider {
     display: flex;
     overflow-x: auto;
     scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+    /* <-- 추가 */
     -webkit-overflow-scrolling: touch;
     scrollbar-width: none;
     /* Firefox */
@@ -25,6 +37,16 @@ body {
 
 .sec1_slider::-webkit-scrollbar {
     display: none;
+}
+
+.sec1_slider>.sec1_container_1,
+.sec1_slider>.sec1_container_2,
+.sec1_slider>.sec1_container_3 {
+    flex: 0 0 100vw;
+    min-width: 100vw;
+    height: 100vh;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
 }
 
 /* container1 */
@@ -41,23 +63,18 @@ body {
     flex: 0 0 100vw;
 }
 
-.sec1_container_1 .img_1 {
+.sec1_container_1 .img_1,
+.sec1_container_2 .img_1,
+.sec1_container_3 .img_1 {
     width: 300px;
     height: 200px;
     position: absolute;
     top: 43%;
     left: 19%;
+    opacity: 0;
+    transform: translateY(-350px);
+    transition: all 0.6s ease;
     animation: motion 1.5s linear 0.2s infinite alternate;
-}
-
-.sec1_container_1 .img_2 {
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    top: 43%;
-    left: 19%;
-    animation: rotate_image 3s linear infinite;
-    transform-origin: 50% 50%;
 }
 
 @keyframes motion {
@@ -74,37 +91,24 @@ body {
     }
 }
 
-
-@keyframes rotate_image {
-    100% {
-        transform: rotate(360deg);
-    }
-
-}
-
-.sec1_container_1 .img_1 {
-    opacity: 0;
-    transform: translateY(-350px);
-    transition: all 0.6s ease;
-}
-
-.sec1_container_1 .img_2 {
-    opacity: 0;
-    transform: translateY(-350px);
-    transition: all 0.6s ease;
-}
-
 .sec1_container_1 .img_1.show {
     opacity: 1;
-    transform: translateX(0);
-    transform: rotate(15deg);
+    transform: translateX(0) rotate(15deg);
+    transition: all 0.6s ease;
 
 }
 
-.sec1_container_1 .img_2.show {
+.sec1_container_2 .img_1.active {
     opacity: 1;
-    transform: translateX(0);
-    transform: rotate(15deg);
+    transform: translateX(0) rotate(15deg);
+    transition: all 0.6s ease;
+
+}
+
+.sec1_container_3 .img_1.active {
+    opacity: 1;
+    transform: translateX(0) rotate(15deg);
+    transition: all 0.6s ease;
 
 }
 
@@ -207,7 +211,10 @@ h3 {
 
 /* tablet */
 @media (min-width: 768px) {
-    .sec1_container_1 .img_1 {
+
+    .sec1_container_1 .img_1,
+    .sec1_container_2 .img_1,
+    .sec1_container_3 .img_1 {
         width: 500px;
         height: 300px;
         position: absolute;
@@ -236,11 +243,15 @@ h3 {
         top: 40%;
     }
 
+
 }
 
 /* desktop */
 @media (min-width: 1200px) {
-    .sec1_container_1 .img_1 {
+
+    .sec1_container_1 .img_1,
+    .sec1_container_2 .img_1,
+    .sec1_container_3 .img_1 {
         width: 800px;
         height: 500px;
         position: absolute;
@@ -282,4 +293,5 @@ h3 {
         left: 5%;
         bottom: 22%;
     }
+
 }
