--- a/70_pf/tylenol/css/sub/headache.css
+++ b/70_pf/tylenol/css/sub/headache.css
@@ -6,6 +6,10 @@
     --gray: #e9ecef;
     --contentsGray: #f8f9fa;
     --menuText: #555;
+    --text: #333;
+    --white: #fff;
+    --red: #E31837;
+
 }
 
 button {
@@ -17,6 +21,7 @@ button {
 body {
     width: 100%;
     height: 100vh;
+    overflow-x: hidden;
     position: relative;
 }
 
@@ -27,7 +32,7 @@ body {
 }
 
 .sub_container {
-    padding: 110px 14px 48px;
+    padding: 110px 20px;
 }
 
 .sub_title {
@@ -40,7 +45,7 @@ body {
 }
 
 .sub_menu {
-    padding: 20px;
+    padding: 20px 5px;
     text-align: center;
     margin: 0 auto;
 }
@@ -52,9 +57,9 @@ body {
     justify-content: center;
 }
 
-.sub_menu li > a {
+.sub_menu li>a {
     display: block;
-    padding: 8px 11px;
+    padding: 8px 8px;
     align-items: center;
     background: var(--gray);
     color: var(--menuText);
@@ -64,7 +69,7 @@ body {
     transition: 0.1s ease;
 }
 
-.sub_menu li > a:hover {
+.sub_menu li>a:hover {
     background: var(--red);
     color: var(--white);
 }
@@ -78,6 +83,7 @@ body {
     justify-content: center;
     margin: 0 auto;
 }
+
 .guide_title {
     padding-top: 20px;
     padding-bottom: 40px;
@@ -85,7 +91,7 @@ body {
 
 .guide_title h3 {
     text-align: center;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
 }
 
 .tabs {
@@ -127,6 +133,12 @@ body {
     display: block;
 }
 
+
+.guide_layout {
+    display: flex;
+    flex-direction: column;
+}
+
 /* guide_left */
 
 .guide_left_1 {
@@ -145,8 +157,49 @@ body {
     font-size: 1.4rem;
     margin-top: 20px;
     margin-bottom: 30px;
+}
+
+/* guide_right */
+.right_container {
+    display: grid;
+    row-gap: 10px;
+    column-gap: 10px;
+    flex-shrink: 0;
+    grid-template-rows: repeat(5, minmax(0, 1fr));
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.right_box {
+    display: flex;
+    padding: 20px;
+    font-size: 1.4rem;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    flex-shrink: 0;
+    /* grid-row: 1 / span 1;
+    grid-column: 1 / span 1; */
+    border-radius: 25px;
+    border: 2px solid var(--gray);
+    background: var(--white);
+}
+
+.right_box_1 {
+    padding: 8px 16px;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    border-radius: 18px;
+    background: var(--red);
+    color: var(--white);
+    font-weight: bold;
 
 }
+
+.right_box_2 {
+    color: var(--menuText);
+}
+
 /* tablet */
 @media (min-width: 768px) {
     .sub_title h2 {
@@ -154,7 +207,7 @@ body {
         font-weight: bold;
     }
 
-    .sub_menu li > a {
+    .sub_menu li>a {
         display: block;
         padding: 16px 36px;
         align-items: center;
@@ -164,16 +217,78 @@ body {
         font-weight: 700;
         border-radius: 30px;
     }
+
+    .tab_section {
+            margin-bottom: 140px;
+
+    }
+
+    .tabs button {
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+
+    .tab-content {
+        padding: 50px;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+
+    }
+
+    .guide_left_1 {
+        font-size: 2rem;
+        font-weight: bold;
+    }
+
+    .guide_left_2 {
+        margin-top: 10px;
+        font-size: 3rem;
+        font-weight: bold;
+        line-height: 1.3;
+    }
+
+    .guide_left_3 {
+        font-size: 2.2rem;
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+
+    .right_box_1 {
+        font-size: 1.6rem;
+    }
+
+    .guide_layout {
+        flex-direction: row;
+        gap: 80px;
+        justify-content: space-between;
+    }
+
+    .guide_left {
+        flex: 0 0 30%;
+        /* 좌측 폭 30% 고정 */
+    }
+
+    .right_container {
+        flex: 1;
+        /* 우측 나머지 폭 */
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        padding-top: 40px;
+    }
 }
 
 /* desktop */
 @media (min-width: 1200px) {
+
+    .sub_container {
+        padding: 0 160px;
+    }
+
     .sub_title h2 {
         font-size: 7rem;
         font-weight: bold;
     }
 
-    .sub_menu li > a {
+    .sub_menu li>a {
         display: block;
         padding: 16px 36px;
         align-items: center;
@@ -182,5 +297,35 @@ body {
         font-size: 1.8rem;
         font-weight: 700;
         border-radius: 30px;
+    }
+
+    .guide_layout {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .guide_left_1 {
+        font-size: 2.4rem;
+        font-weight: bold;
+    }
+
+    .guide_left_2 {
+        margin-top: 30px;
+        font-size: 5rem;
+        font-weight: bold;
+        line-height: 1.3;
+    }
+
+    .guide_left_3 {
+        font-size: 2.2rem;
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+
+    .right_container {
+        grid-template-columns: repeat(4, 1fr);
+        /* 가로 4칸 고정 */
+        grid-template-rows: repeat(2, auto);
+        /* 세로 2줄 고정 */
     }
 }
