--- a/70_pf/tylenol/css/sub/headache.css
+++ b/70_pf/tylenol/css/sub/headache.css
@@ -44,7 +44,7 @@ body {
 }
 
 .sub_menu {
-    padding: 20px 5px;
+    padding: 20px 15px;
     text-align: center;
     margin: 0 auto;
 }
@@ -59,7 +59,7 @@ body {
 
 .sub_menu li > a {
     display: block;
-    padding: 8px 8px;
+    padding: 8px 16px;
     align-items: center;
     background: var(--gray);
     color: var(--menuText);
@@ -85,7 +85,7 @@ body {
 }
 
 .guide_title {
-    padding-top: 100px;
+    padding-top: 60px;
     padding-bottom: 40px;
 }
 
@@ -122,6 +122,7 @@ body {
     margin-bottom: 80px;
 }
 
+/* 해당 탭 */
 .tab_button.active {
     background: var(--red);
     color: var(--white);
@@ -139,7 +140,7 @@ body {
     flex-direction: column;
 }
 
-/* guide_left */
+/* guide_left -flex, grid 사용 페이지마다 상이 */
 .guide_left {
     display: grid;
 }
@@ -350,7 +351,7 @@ body {
 }
 
 /* desktop */
-@media (min-width: 1300px) {
+@media (min-width: 1200px) {
     .sub_container {
         padding: 110px 160px;
     }
