--- a/70_pf/hubble_react/src/css/Nav.css
+++ b/70_pf/hubble_react/src/css/Nav.css
@@ -1,66 +1,56 @@
-/* reset */
-:root {
-    --text: #333;
-    --white: #fff;
-}
-* {
-    margin: 0;
-    padding: 0;
-}
-
-ul {
-    list-style: none;
-}
-
-img {
-    width: 100%;
-    height: 100%;
-    vertical-align: top;
-    object-fit: cover;
-}
-
-a {
-    text-decoration: none;
-    color: var(--text);
-}
-
-/* common */
-/* typo system */
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap");
-
 body {
-    font-family: "Noto Sans KR", sans-serif;
-    background: var(--white);
-    color: var(--text);
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
+#header {
+    width: 100%;
+    background: transparent;
 }
 
 .nav {
-    width: 1170px;
+    width: 100%;
     margin: 0 auto;
+    padding: 30px 10px;
     display: flex;
     justify-content: space-between;
-    padding: 10px 200px;
-    font-size: 20px;
+    font-size: 1.6rem;
     align-items: center;
 }
 
 .logo img {
     width: 100px;
-    height: 180px;
 }
 
 .nav-sub {
     display: flex;
-    line-height: 150px;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .nav-sub a {
-    padding: 10px 0;
-    margin: 0 20px;
-    border-top: 2px solid transparent;
+    border-bottom: 2px solid var(--text);
     transition: 0.3s ease;
 }
 
 .nav-sub a:hover {
-    border-top: 2px solid var(--text);
+    border-bottom: 2px dashed var(--text);
+}
+
+
+/* 타블렛 */
+@media (min-width: 768px) {
+    .nav-sub {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;
+    }
+
+    .nav-sub li {
+        margin-left: 10px;
+    }
+}
+/* 데스크탑 */
+@media (min-width: 1300px) {
 }
