--- a/70_pf/haribo_pf/css/main.css
+++ b/70_pf/haribo_pf/css/main.css
@@ -300,7 +300,7 @@ a {
 
 #sec4 #map iframe {
     margin-bottom: 8px;
-    width: 100vw;
+    width: 100%;
     height: 500px;
     border: none;
 }
