--- a/70_pf/hubble_react/src/css/Portfolio.css
+++ b/70_pf/hubble_react/src/css/Portfolio.css
@@ -2,12 +2,11 @@
 .bookbox {
     margin: 0 auto;
     height: 100%;
-    padding-top: 20px;
 }
 
 .bookbox-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 1rem;
     /* column-count: 4;
     column-gap: 10px; */
@@ -18,20 +17,23 @@
     display: inline-block;
     width: 100%;
     height: auto;
-    margin-bottom: 10px;
     cursor: pointer;
+    border: 1px solid var(--text);
 }
 
 /* book hover overlay */
 .overlay {
-    opacity: 0;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
     width: 100%;
     height: 100%;
+    display: flex; 
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    line-height: 400px;
     color: var(--white);
     background-color: rgba(0, 0, 0, 0);
     transition: background-color 0.3s ease;
@@ -39,18 +41,14 @@
 
 .book-card:hover .overlay {
     opacity: 1;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(59, 171, 61, 0.7);
 }
 
-@media (min-width:768px) {
+@media (min-width: 768px) {
     .bookbox-container {
-            grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
     }
 }
 
-
-@media (min-width:1300px) {
-    .bookbox-container {
-            grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
+@media (min-width: 1300px) {
 }
