--- a/70_pf/hubble_react/src/css/Abouts.css
+++ b/70_pf/hubble_react/src/css/Abouts.css
@@ -1,5 +1,46 @@
 .main {
     width: 100%;
+    height: 100vh;
     margin: 0 auto;
+    background: url(../images/nasa3.jpg) no-repeat 50% 50% / cover fixed;
+    color: var(--white);
+}
 
+.main a {
+    color: var(--white);
+}
+
+.main_container {
+    padding: 180px 50px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    justify-content: center;
+}
+
+.text1 {
+    font-size: 3rem;
+}
+
+.contact {
+    text-align: end;
+    padding-top: 50px;
+}
+
+.contact a {
+    font-size: 3rem;
+}
+
+/* 타블렛 */
+@media (min-width: 768px) {
+    .main_container {
+        padding: 150px;
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        justify-content: center;
+    }
+}
+/* 데스크탑 */
+@media (min-width: 1300px) {
 }
