--- a/70_pf/hubble_react/src/css/Nav.css
+++ b/70_pf/hubble_react/src/css/Nav.css
@@ -12,7 +12,7 @@ body {
 .nav {
     width: 100%;
     margin: 0 auto;
-    padding: 60px 10px;
+    padding: 60px 10px 120px;
     display: flex;
     justify-content: space-between;
     font-size: 1.6rem;
