--- a/70_pf/tylenol/css/index.css
+++ b/70_pf/tylenol/css/index.css
@@ -1,3 +1,6 @@
 @charset "utf-8";
 @import url(./reset.css);
-
+@import url(./header.css);
+@import url(./sec1.css);
+@import url(./sec2.css);
+@import url(./sec3.css);
