--- a/70_pf/tylenol/css/sec1.css
+++ b/70_pf/tylenol/css/sec1.css
@@ -22,6 +22,11 @@ body {
     height: 100vh;
 }
 
+#sec3 {
+    width: 100vw;
+    height: 100vh;
+}
+
 .sec1_slider {
     display: flex;
     overflow-x: auto;
