--- a/70_pf/tylenol/css/sec1.css
+++ b/70_pf/tylenol/css/sec1.css
@@ -6,7 +6,7 @@
 body {
     width: 100%;
     height: 100vh;
-    overflow-y: hidden;
+    overflow-x: hidden;
     position: relative;
 
 }
@@ -17,15 +17,6 @@ body {
     overflow: hidden;
 }
 
-#sec2 {
-    width: 100vw;
-    height: 100vh;
-}
-
-#sec3 {
-    width: 100vw;
-    height: 100vh;
-}
 
 .sec1_slider {
     display: flex;
