--- a/70_pf/tylenol/css/sec3.css
+++ b/70_pf/tylenol/css/sec3.css
@@ -1,16 +1,54 @@
 @charset "utf-8";
 
-/* slides-wrapper (sec1 내부 슬라이드 컨테이너) */
 
+.menu-icon {
+    cursor: pointer;
+}
+
+.menu-icon img {
+    width: 30px;
+}
+
+.full-page-wrapper {
+    position: relative;
+    min-height: 100vh;
+    padding-top: 100px;
+    box-sizing: border-box;
+}
+
+/* 각 섹션 (full-page-wrapper의 자식) */
+.slide-section {
+    position: relative;
+    height: 100%;
+    display: flex;
+}
+
+.slide-section.active {
+    visibility: visible;
+    opacity: 1;
+    z-index: 1;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    /* jQuery fadeIn/fadeOut을 사용한다면 이 상태를 유지 */
+    backdrop-filter: blur(6px);
+    background-color: rgba(0, 0, 0, 0.25);
+    z-index: 1001;
+    /* 헤더(1000)보다 높게 설정하여 헤더 위로 메뉴가 올라오도록 */
+}
+
+/* slides-wrapper (sec1 내부 슬라이드 컨테이너) */
 .slides-wrapper {
     display: flex;
-
     width: 300vw;
-
     height: 100%;
-
     /* ★ 중요: 부모인 .slide-section의 높이를 100% 채움 */
-
     transition: transform 0.7s ease-in-out;
 }
 
@@ -18,29 +56,17 @@
 
 .group1 {
     width: 100vw;
-
     height: 100%;
-
     /* ★ 중요: 부모인 slides-wrapper의 높이를 100% 채움 */
-
     flex-shrink: 0;
-
     display: flex;
-
     /* 내부 콘텐츠 (main, des) 가로 정렬 */
-
     align-items: center;
-
     /* 수직 중앙 정렬 */
-
     justify-content: center;
-
     /* 수평 중앙 정렬 */
-
     background-color: white;
-
     margin: 0;
-
     padding: 0;
 }
 
@@ -48,13 +74,9 @@
 
 .group1 .main {
     height: 100%;
-
     /* ★ 중요: 부모 group1의 높이를 채움 */
-
     display: flex;
-
     align-items: center;
-
     justify-content: center;
 }
 
@@ -62,13 +84,9 @@
 
 .group1 .main img {
     max-width: 100%;
-
     max-height: 100%;
-
     object-fit: contain;
-
     /* 비율 유지하며 콘텐츠 박스에 맞춤 */
-
     display: block;
 }
 
@@ -77,46 +95,35 @@
 .des,
 .des1 {
     height: 100%;
-
     /* ★ 중요: 부모 group1의 높이를 채움 */
-
     display: flex;
-
     flex-direction: column;
-
     /* 텍스트 콘텐츠 내부에서 세로 정렬 */
-
     justify-content: center;
-
     /* 수직 중앙 정렬 */
-
     align-items: flex-start;
-
     /* 왼쪽 정렬 (필요시 center) */
-
     padding-right: 200px;
 }
 
 /* 기존 콘텐츠 스타일 */
 
-h1 {
-    font-size: 40px;
+.des h1 {
+    font-size: 4rem;
 }
 
-h2 {
-    font-size: 60px;
+.des h2 {
+    font-size: 6rem;
 }
 
-p {
-    font-size: 20px;
-
+.des p {
+    font-size: 2rem;
     margin: 15px 0;
-
     font-weight: 200;
 }
 
 .product {
-    font-size: 17px;
+    font-size: 1.7rem;
 }
 
 .product img {
