--- a/70_pf/tylenol/css/sec3.css
+++ b/70_pf/tylenol/css/sec3.css
@@ -1,14 +1,5 @@
 @charset "utf-8";
 
-
-.menu-icon {
-    cursor: pointer;
-}
-
-.menu-icon img {
-    width: 30px;
-}
-
 .full-page-wrapper {
     position: relative;
     min-height: 100vh;
@@ -50,6 +41,19 @@
     height: 100%;
     /* ★ 중요: 부모인 .slide-section의 높이를 100% 채움 */
     transition: transform 0.7s ease-in-out;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+    /* <-- 추가 */
+    -webkit-overflow-scrolling: touch;
+    scrollbar-width: none;
+    /* Firefox */
+    -ms-overflow-style: none;
+    /* IE */
+}
+
+.sec1_slider::-webkit-scrollbar {
+    display: none;
 }
 
 /* group1 (slides-wrapper의 각 개별 슬라이드) */
@@ -73,7 +77,7 @@
 /* .main (이미지 컨테이너) */
 
 .group1 .main {
-    height: 100%;
+    /* height: 100%; */
     /* ★ 중요: 부모 group1의 높이를 채움 */
     display: flex;
     align-items: center;
@@ -108,18 +112,27 @@
 
 /* 기존 콘텐츠 스타일 */
 
-.des h1 {
+.des h1,
+.des1 h1 {
     font-size: 4rem;
 }
 
-.des h2 {
+.des h2,
+.des1 h2 {
     font-size: 6rem;
 }
 
-.des p {
+.des p,
+.des1 p {
     font-size: 2rem;
     margin: 15px 0;
     font-weight: 200;
+}
+
+.des img,
+.des1 img {
+    width: auto;
+    height: 100%;
 }
 
 .product {
