--- a/70_pf/tylenol/css/sec3.css
+++ b/70_pf/tylenol/css/sec3.css
@@ -20,20 +20,6 @@
     z-index: 1;
 }
 
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: none;
-    /* jQuery fadeIn/fadeOut을 사용한다면 이 상태를 유지 */
-    backdrop-filter: blur(6px);
-    background-color: rgba(0, 0, 0, 0.25);
-    z-index: 1001;
-    /* 헤더(1000)보다 높게 설정하여 헤더 위로 메뉴가 올라오도록 */
-}
-
 /* slides-wrapper (sec1 내부 슬라이드 컨테이너) */
 .slides-wrapper {
     display: flex;
@@ -64,12 +50,12 @@
     /* ★ 중요: 부모인 slides-wrapper의 높이를 100% 채움 */
     flex-shrink: 0;
     display: flex;
+    flex-direction: column-reverse;
     /* 내부 콘텐츠 (main, des) 가로 정렬 */
     align-items: center;
     /* 수직 중앙 정렬 */
     justify-content: center;
     /* 수평 중앙 정렬 */
-    background-color: white;
     margin: 0;
     padding: 0;
 }
@@ -77,8 +63,6 @@
 /* .main (이미지 컨테이너) */
 
 .group1 .main {
-    /* height: 100%; */
-    /* ★ 중요: 부모 group1의 높이를 채움 */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -98,7 +82,7 @@
 
 .des,
 .des1 {
-    height: 100%;
+    /* height: 100%; */
     /* ★ 중요: 부모 group1의 높이를 채움 */
     display: flex;
     flex-direction: column;
@@ -107,24 +91,22 @@
     /* 수직 중앙 정렬 */
     align-items: flex-start;
     /* 왼쪽 정렬 (필요시 center) */
-    padding-right: 200px;
 }
 
 /* 기존 콘텐츠 스타일 */
-
 .des h1,
 .des1 h1 {
-    font-size: 4rem;
+    font-size: 2rem;
 }
 
 .des h2,
 .des1 h2 {
-    font-size: 6rem;
+    font-size: 4rem;
 }
 
 .des p,
 .des1 p {
-    font-size: 2rem;
+    font-size: 1.6rem;
     margin: 15px 0;
     font-weight: 200;
 }
@@ -136,9 +118,88 @@
 }
 
 .product {
-    font-size: 1.7rem;
+    font-size: 1.6rem;
 }
 
 .product img {
     vertical-align: bottom;
+}
+
+/* tablet */
+@media (min-width: 768px) {
+    .des h1,
+    .des1 h1 {
+        font-size: 3rem;
+    }
+
+    .des h2,
+    .des1 h2 {
+        font-size: 6rem;
+    }
+
+    .des p,
+    .des1 p {
+        font-size: 2rem;
+        margin: 15px 0;
+        font-weight: 200;
+    }
+
+    .product {
+        font-size: 1.7rem;
+    }
+}
+
+/* desktop */
+@media (min-width: 1200px) {
+    .group1 {
+        width: 100vw;
+        height: 100%;
+        /* ★ 중요: 부모인 slides-wrapper의 높이를 100% 채움 */
+        flex-shrink: 0;
+        display: flex;
+        flex-direction: row;
+        /* 내부 콘텐츠 (main, des) 가로 정렬 */
+        align-items: center;
+        /* 수직 중앙 정렬 */
+        justify-content: center;
+        /* 수평 중앙 정렬 */
+        background-color: white;
+        margin: 0;
+        padding: 0;
+    }
+
+    .des,
+    .des1 {
+        height: 100%;
+        /* ★ 중요: 부모 group1의 높이를 채움 */
+        display: flex;
+        flex-direction: column;
+        /* 텍스트 콘텐츠 내부에서 세로 정렬 */
+        justify-content: center;
+        /* 수직 중앙 정렬 */
+        align-items: flex-start;
+        /* 왼쪽 정렬 (필요시 center) */
+        padding-right: 200px;
+    }
+
+    .des h1,
+    .des1 h1 {
+        font-size: 4rem;
+    }
+
+    .des h2,
+    .des1 h2 {
+        font-size: 6rem;
+    }
+
+    .des p,
+    .des1 p {
+        font-size: 2rem;
+        margin: 15px 0;
+        font-weight: 200;
+    }
+
+    .product {
+        font-size: 1.7rem;
+    }
 }
