--- a/70_pf/tylenol/css/sub/helpcenter.css
+++ b/70_pf/tylenol/css/sub/helpcenter.css
@@ -18,7 +18,7 @@ button {
 }
 
 /* section+footer */
-.sub_body {
+.helpcenter_body {
     display: flex;
     flex-direction: column;
 }
@@ -31,52 +31,36 @@ body {
     position: relative;
 }
 
-#sub {
+#helpcenter {
     width: 100vw;
     height: 100vh;
     margin: 0 auto;
     flex: 1;
 }
 
-.sub_container {
-    padding: 110px 20px 0;
+.helpcenter_container {
+    padding: 50px 20px 0;
+    display: flex;
+    flex-direction: column;
 }
 
-.sub_title {
+.helpcenter_title {
     text-align: center;
 }
 
-.sub_title h2 {
+.helpcenter_title h2 {
     font-size: 2.5rem;
     font-weight: bold;
 }
 
-.sub_menu {
-    padding: 20px 15px;
-    text-align: center;
-    margin: 0 auto;
+.container1.part1 {
+    padding-bottom: 60px;
 }
-
-.sub_menu ul {
-    margin: 0 auto;
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    flex-wrap: wrap;
+.container1.part2 {
+    padding-bottom: 100px;
 }
-
-.sub_menu li > a {
-    display: block;
-    padding: 8px 16px;
-    align-items: center;
-    background: var(--gray);
-    color: var(--menuText);
-    font-size: 1.4rem;
-    font-weight: 700;
-    border-radius: 30px;
-    transition: 0.1s ease;
-    flex: 1 1 20%; /* 기본 너비 20%, 늘어나거나 줄어들 수 있음 */
-    min-width: 100px; /* 너무 작아지지 않도록 */
+.container1.part3 {
+    padding-bottom: 30px;
 }
 
 .sub_menu li > a:hover {
@@ -85,40 +69,25 @@ body {
 }
 
 /* 본문 */
-.guide_box {
+.helpcenter_container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin: 0 auto;
 }
 
-.guide_title {
+.container1_title {
     padding-top: 60px;
     padding-bottom: 40px;
 }
 
-.guide_title h3 {
+.container1_title h3 {
     text-align: center;
     font-size: 1.8rem;
 }
 
-.tabs {
-    display: flex;
-    justify-content: center;
-}
-
-.tabs a {
-    background: var(--contentsGray);
-    color: var(--menuText);
-    padding: 15px 33px;
-    cursor: pointer;
-    width: 100%;
-    font-size: 1.3rem;
+.container1 p:first-child {
     font-weight: bold;
-    text-align: center;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    transition: 0.1s ease;
 }
 
 .tabs a:hover {
@@ -137,10 +106,7 @@ body {
 }
 
 .tab-content {
-    background: var(--contentsGray);
     padding: 20px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
 }
 
 .guide_layout {
@@ -148,127 +114,6 @@ body {
     flex-direction: column;
 }
 
-/* guide_left -flex, grid 사용 페이지마다 상이 */
-.guide_left {
-    display: grid;
-}
-
-.guide_left > div {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas:
-        "c1 c2"
-        "g3 g3";
-    justify-content: space-between;
-}
-
-.left_container_1 {
-    grid-area: c1;
-}
-
-.left_container_2 {
-    align-content: end;
-    text-align: end;
-    grid-area: c2;
-}
-
-.guide_left_3 {
-    grid-area: g3;
-}
-
-/* .guide_left > div {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-} */
-
-.guide_left_1 {
-    font-size: 1.6rem;
-    font-weight: bold;
-}
-
-.guide_left_2 {
-    margin-top: 10px;
-    font-size: 2.2rem;
-    font-weight: bold;
-    line-height: 1.3;
-}
-
-.guide_left_3 {
-    font-size: 1.4rem;
-    margin-top: 20px;
-    margin-bottom: 30px;
-}
-
-.left_container_2 a {
-    display: inline-block;
-    padding: 8px 16px;
-    background: var(--red);
-    color: var(--white);
-    font-size: 1.4rem;
-    font-weight: bold;
-    border-radius: 30px;
-}
-
-/* guide_right */
-.right_container {
-    display: grid;
-    row-gap: 10px;
-    column-gap: 10px;
-    flex-shrink: 0;
-}
-
-.right_box {
-    display: flex;
-    padding: 20px;
-    font-size: 1.4rem;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
-    flex-shrink: 0;
-    /* grid-row: 1 / span 1;
-    grid-column: 1 / span 1; */
-    border-radius: 25px;
-    border: 2px solid var(--gray);
-    background: var(--white);
-}
-
-.right_box_1 {
-    padding: 8px 16px;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    border-radius: 30px;
-    background: var(--red);
-    color: var(--white);
-    font-weight: bold;
-}
-
-.right_box_2 {
-    color: var(--menuText);
-}
-
-/* 컨텐츠마다 그리드 조절 */
-/* 두통 원인 */
-.right_container.what_headache {
-    grid-template-rows: repeat(5, minmax(0, 1fr));
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
-/* 두통 완화법 */
-.right_container.head_soultion {
-    display: grid;
-    row-gap: 10px;
-    column-gap: 10px;
-    flex-shrink: 0;
-}
-
-/* scroll motion */
-.motion {
-    position: relative;
-    top: 100px;
-    opacity: 0;
-}
 
 /* tablet */
 @media (min-width: 768px) {
