--- a/70_pf/tylenol/css/index.css
+++ b/70_pf/tylenol/css/index.css
@@ -6,3 +6,7 @@
 @import url(/w0310/70_pf/tylenol/css/sec2.css);
 @import url(/w0310/70_pf/tylenol/css/sec3.css);
 @import url(/w0310/70_pf/tylenol/css/footer.css);
+
+
+
+/* font */
